# kindle-parsing

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml
