[tool.poetry]
name = "kindle-parsing"
version = "0.1.0"
description = ""
authors = ["Vegard Stikbakke <vegard.stikbakke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
datasette = "^0.40"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
pytest = "^5.4.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # isort all Python files
known_third_party = []